[package]
name = "infraestructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.17", features = ["headers"] }
dotenvy_macro = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.4", features = ["cors"] }
validator = { version = "0.18.1", features = ["derive"] }
