[package]
name = "infraestructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
core = { path = "../core" }

axum = { version = "0.5.17", features = ["headers"] }
dotenvy_macro = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.4", features = ["cors"] }
validator = { version = "0.18.1", features = ["derive"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "time", "offline"] }
async-trait = "0.1"
anyhow = "1"
rust-argon2 = "1.0"
jsonwebtoken = "8"
mockall = "0.11.1"
lazy_static = "1.4.0"
slug = "0.1.4"
itertools = "0.10.2"
time = "0.3"
