[package]
name = "myapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
infraestructure = { path = "../infraestructure" }

tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
